unpackaged/main/default/objects/Account/fields/Demo_Test__c.field-meta.xml
<CustomField>
    <fullName>Demo_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checkbox for demo purposes</description>
    <label>Demo Test</label>
    <type>Checkbox</type>
</CustomField>