unpackaged/main/default/objects/Account/fields/Test_field_2__c.field-meta.xml
<CustomField>
    <fullName>Test_field_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test- field 2</label>
    <type>Checkbox</type>
</CustomField>